--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^8.0.0",
+    "bootstrap": "^4.5.2",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
@@ -30,6 +31,7 @@
     "is-wsl": "^1.1.0",
     "mini-css-extract-plugin": "0.5.0",
     "moment": "^2.24.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -42,14 +44,17 @@
     "react-app-polyfill": "^1.0.0",
     "react-dev-utils": "^9.0.0",
     "react-dom": "^16.8.6",
+    "react-material-ui-form-validator": "^2.1.1",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-vis": "^1.11.7",
     "redux": "^4.0.4",
     "resolve": "1.10.0",
-    "sass-loader": "7.1.0",
+    "sass-loader": "^9.0.3",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
+    "swiper": "^4.5.0",
     "terser-webpack-plugin": "1.2.3",
     "url-loader": "1.1.2",
     "uuid": "^3.3.3",
