--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv-expand": "4.2.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
+    "history": "^4.10.0",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
