--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-router-dom": "^5.1.2",
     "react-vis": "^1.11.7",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
     "sass-loader": "^9.0.3",
     "semver": "6.0.0",
