--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "upwork-jobs-feed-tracker",
-  "description": "Upwork jobs feed tracker",
+  "description": "Work Alert",
   "version": "2.0.0",
   "author": "Ilya Nee",
   "license": "ISC",
@@ -24,6 +24,7 @@
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
+    "fast-xml-parser": "^3.17.4",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "history": "^4.10.0",
@@ -45,11 +46,14 @@
     "react-app-polyfill": "^1.0.0",
     "react-dev-utils": "^9.0.0",
     "react-dom": "^16.8.6",
+    "react-html-parser": "^2.0.2",
+    "react-loading-overlay": "^1.0.1",
     "react-material-ui-form-validator": "^2.1.1",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-vis": "^1.11.7",
+    "react-xml-parser": "^1.1.6",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
